k8s/app/registry/dev/disable-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: mgmt
spec:
  template:
    spec:
      containers:
        - name: registry
          volumeMounts:
            - name: certs
              $patch: delete
          livenessProbe:
            httpGet:
              scheme: HTTP
          readinessProbe:
            httpGet:
              scheme: HTTP
      volumes:
        - name: certs
          $patch: delete
